# enum_discriminant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs
tests/: discriminant_tests.rs
tests/compile-fail/: derive_from_discriminant_without_repr.rs  derive_from_discriminant_without_repr.stderr  derive_into_discriminant_without_repr.rs  derive_into_discriminant_without_repr.stderr  no_type.rs  no_type.stderr  several_integer_types.rs  several_integer_types.stderr  several_variants_with_same_discriminant.rs  several_variants_with_same_discriminant.stderr  unknown_type.rs  unknown_type.stderr
traits/: Cargo.toml  README.md
traits/src/: lib.rs
