[package]
name = "enum_discriminant"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Johannesson"]
description = """
Procedural macro to add functions on enum types to get discrimnant value from variant or create
unit variant from discriminant value.
"""

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
name = "enum_discriminant"
path = "src/lib.rs"
proc-macro = true
