[package]
name = "enum_discriminant"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Johannesson"]
description = """
Procedural macro to add functions on enum types to get discrimnant value from variant or create
unit variant from discriminant value.
"""
repository = "https://github.com/jordfras/enum_discriminant"
keywords = ["enum", "discriminant", "ordinal"]
categories = ["rust-patterns"]
exclude = ["/.github/"]

[dependencies]
enum_discriminant_traits = { version = "=0.1.0", path = "traits" }
enum_discriminant_macro = { version = "=0.1.0", path = "macro" }

[dev-dependencies]
trybuild = "1.0"
