[package]
name = "enum_discriminant_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Johannesson"]
description = """
Internal implementation of procedural macro for enum_discriminant crate
"""
repository = "https://github.com/jordfras/enum_discriminant"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
enum_discriminant_traits = { version = "=0.1.0", path = "../traits" }

[lib]
name = "enum_discriminant_macro"
path = "src/lib.rs"
proc-macro = true
